rewrite build and print heap

--- a/347_Top_K_Frequent_Elements/Min_and_Max_Heap.ipynb
+++ b/347_Top_K_Frequent_Elements/Min_and_Max_Heap.ipynb
@@ -31,17 +31,7 @@
     "            smallest = right\n",
     "        if smallest != index:\n",
     "            self.heap[smallest], self.heap[index] = self.heap[index], self.heap[smallest]\n",
-    "            self.__minHeapify(smallest)\n",
-    "\n",
-    "    def buildHeap(self, arr):\n",
-    "        self.heap = arr\n",
-    "        for i in range(len(arr)-1, -1, -1):\n",
-    "            self.__minHeapify(i)\n",
-    "\n",
-    "    def printHeap(self):\n",
-    "        for i in self.heap:\n",
-    "            print(i, end=' ')\n",
-    "        print()"
+    "            self.__minHeapify(smallest)\n"
    ]
   }
  ],
