--- a/347_Top_K_Frequent_Elements/Min_and_Max_Heap.ipynb
+++ b/347_Top_K_Frequent_Elements/Min_and_Max_Heap.ipynb
@@ -2,33 +2,71 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[50]\n",
+      "[50, 30]\n",
+      "[50, 30, 20]\n",
+      "[50, 30, 20, 15]\n",
+      "[50, 30, 20, 15, 10]\n",
+      "[50, 30, 20, 15, 10, 8]\n",
+      "[50, 30, 20, 15, 10, 8, 16]\n",
+      "[50, 30, 20, 15, 10, 8, 16]\n"
+     ]
+    }
+   ],
    "source": [
-    "#Min and Max heap from scratch in Python\n",
-    "\n",
-    "class MinHeap:\n",
+    "#Max heap\n",
+    "class MaxHeap:\n",
     "    def __init__(self):\n",
     "        self.heap = []\n",
+    "  \n",
+    "    def insert(self, value):\n",
+    "        #Append the new value to the end of the heap.\n",
+    "        self.heap.append(value)\n",
+    "        #to get the index of the last element in a list\n",
+    "        # -1 because indexing starts from 0\n",
+    "        self._siftUp(len(self.heap) - 1)\n",
+    "        print(self.heap)\n",
+    "    \n",
+    "    # sift up the new value to its proper position. This is done in a loop that compares the new value with its parent and swaps them if the parent is smaller.\n",
+    "    def _siftUp(self, index):\n",
+    "        parent=(index-1)//2\n",
+    "        if index>0 and self.heap[index]>self.heap[parent]:\n",
+    "            self.heap[index],self.heap[parent]=self.heap[parent],self.heap[index]\n",
+    "            self._siftUp(parent)\n",
     "\n",
-    "    def __minHeapify(self, index):\n",
-    "        left = (index * 2) + 1\n",
-    "        right = (index * 2) + 2\n",
-    "        smallest = index\n",
-    "        if len(self.heap) > left and self.heap[smallest] > self.heap[left]:\n",
-    "            smallest = left\n",
-    "        if len(self.heap) > right and self.heap[smallest] > self.heap[right]:\n",
-    "            smallest = right\n",
-    "        if smallest != index:\n",
-    "            self.heap[smallest], self.heap[index] = self.heap[index], self.heap[smallest]\n",
-    "            self.__minHeapify(smallest)\n"
+    "arr=[50,30,20,15,10,8,16]\n",
+    "heap = MaxHeap()\n",
+    "for value in arr:\n",
+    "    heap.insert(value)\n",
+    "#Prints the final heap\n",
+    "print(heap.heap)"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "DataMining584",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.17"
   }
  },
  "nbformat": 4,
