--- a/347_Top_K_Frequent_Elements/Min_and_Max_Heap.ipynb
+++ b/347_Top_K_Frequent_Elements/Min_and_Max_Heap.ipynb
@@ -45,7 +45,7 @@
     "heap = MaxHeap()\n",
     "for value in arr:\n",
     "    heap.insert(value)\n",
-    "#Prints the final heap\n",
+    "#Print the final heap\n",
     "print(heap.heap)"
    ]
   }
