--- a/238_Product_Of_Array_Except_Self.ipynb
+++ b/238_Product_Of_Array_Except_Self.ipynb
@@ -96,6 +96,7 @@
     "        return result\n",
     "\n",
     "# Call the function\n",
+    "# by using the above approach, we can solve the problem without using extra space\n",
     "nums = [1,2,3,4]\n",
     "sol = Solution()\n",
     "print(sol.productExceptSelf(nums))"
