--- a/1_Two_Sum.ipynb
+++ b/1_Two_Sum.ipynb
@@ -28,7 +28,7 @@
     "        return\n",
     "\n",
     "#Time complexity is O(n) and space complexity is O(n)\n",
-    "#This is a hash table based solution\n",
+    "#hash table based solution\n",
     "#Call the function with the list of numbers and the target sum\n",
     "sol=Solution()\n",
     "print(sol.twoSum([2,7,11,15],9))"
