--- a/128_Longest_consequtive_Subsequence.ipynb
+++ b/128_Longest_consequtive_Subsequence.ipynb
@@ -43,7 +43,7 @@
     "\n",
     "# Time complexity: O(n)\n",
     "# Space complexity: O(n)\n",
-    "# Call the function\n",
+    "# Calling the function\n",
     "nums=[100,4,200,1,3,2]\n",
     "s=Solution()\n",
     "print(s.longestConsecutive(nums))"
