--- a/128_Longest_consequtive_Subsequence.ipynb
+++ b/128_Longest_consequtive_Subsequence.ipynb
@@ -46,7 +46,11 @@
     "# Calling the function\n",
     "nums=[100,4,200,1,3,2]\n",
     "s=Solution()\n",
-    "print(s.longestConsecutive(nums))"
+    "print(s.longestConsecutive(nums))\n",
+    "\n",
+    "nums1=[0,3,7,2,5,8,4,6,0,1]\n",
+    "s=Solution()\n",
+    "print(s.longestConsecutive(nums1))"
    ]
   },
   {
