Added test cases

--- a/1_Two_Sum.ipynb
+++ b/1_Two_Sum.ipynb
@@ -31,7 +31,8 @@
     "#hash table based solution\n",
     "#Call the function with the list of numbers and the target sum\n",
     "sol=Solution()\n",
-    "print(sol.twoSum([2,7,11,15],9))"
+    "print(sol.twoSum([2,7,11,15],9))\n",
+    "print(sol.twoSum([3,2,4],6))"
    ]
   }
  ],
