Test cases added

--- a/167_Two_Sum_II_Sorted_Array.ipynb
+++ b/167_Two_Sum_II_Sorted_Array.ipynb
@@ -9,14 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2]\n"
+      "[1, 2]\n",
+      "[4, 9]\n"
      ]
     }
    ],
@@ -39,6 +40,10 @@
     "# Call the function\n",
     "numbers = [2,7,11,15]\n",
     "target = 9\n",
+    "sol = Solution()\n",
+    "print(sol.twoSum(numbers, target))\n",
+    "numbers=[2,3,4,5,6,7,8,9,10]\n",
+    "target=15\n",
     "sol = Solution()\n",
     "print(sol.twoSum(numbers, target))"
    ]
