added test cases

--- a/443_String_Compression.ipynb
+++ b/443_String_Compression.ipynb
@@ -50,7 +50,9 @@
      "output_type": "stream",
      "text": [
       "6\n",
-      "['a', '2', 'b', '2', 'c', '3', 'c']\n"
+      "['a', '2', 'b', '2', 'c', '3', 'c']\n",
+      "4\n",
+      "['a', 'b', '1', '2', 'b', 'b', 'b', 'b', 'b', 'b', 'b', 'b', 'b']\n"
      ]
     }
    ],
@@ -76,6 +78,10 @@
     "#Call the function\n",
     "chars = [\"a\",\"a\",\"b\",\"b\",\"c\",\"c\",\"c\"]\n",
     "sol = Solution()\n",
+    "print(sol.compress(chars))\n",
+    "print(chars)\n",
+    "chars=[\"a\",\"b\",\"b\",\"b\",\"b\",\"b\",\"b\",\"b\",\"b\",\"b\",\"b\",\"b\",\"b\"]\n",
+    "sol=Solution()\n",
     "print(sol.compress(chars))\n",
     "print(chars)"
    ]
