--- a/15_3_Sum.ipynb
+++ b/15_3_Sum.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-1, -1, 2], [-1, 0, 1]]\n"
+      "[[-1, -1, 2], [-1, 0, 1]]\n",
+      "[]\n"
      ]
     }
    ],
@@ -55,6 +56,8 @@
     "#Call the function\n",
     "nums=[-1,0,1,2,-1,-4]\n",
     "sol=Solution()\n",
+    "print(sol.threeSum(nums))\n",
+    "nums=[9,8,7,6,5,4,3,2,1,0]\n",
     "print(sol.threeSum(nums))"
    ]
   },
