--- a/15_3_Sum.ipynb
+++ b/15_3_Sum.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,8 @@
      "output_type": "stream",
      "text": [
       "[[-1, -1, 2], [-1, 0, 1]]\n",
-      "[]\n"
+      "[]\n",
+      "[[0, 0, 0]]\n"
      ]
     }
    ],
@@ -58,6 +59,8 @@
     "sol=Solution()\n",
     "print(sol.threeSum(nums))\n",
     "nums=[9,8,7,6,5,4,3,2,1,0]\n",
+    "print(sol.threeSum(nums))\n",
+    "nums=[0,0,0,0]\n",
     "print(sol.threeSum(nums))"
    ]
   },
