--- a/125_Valid_Palindrome.ipynb
+++ b/125_Valid_Palindrome.ipynb
@@ -37,14 +37,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "True\n",
+      "False\n"
      ]
     }
    ],
@@ -72,7 +73,10 @@
     "#Call the function\n",
     "input_str = \"A man, a plan, a canal: Panama\"\n",
     "solution = Solution()\n",
-    "print(solution.isPalindrome(input_str))\n"
+    "print(solution.isPalindrome(input_str))\n",
+    "# Another test case\n",
+    "input_str = \"race a car\"\n",
+    "print(solution.isPalindrome(input_str))  # Expected output: False"
    ]
   },
   {
