--- a/11_Container_With_Most_Water.ipynb
+++ b/11_Container_With_Most_Water.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "49\n"
+      "49\n",
+      "1\n"
      ]
     }
    ],
@@ -39,7 +40,9 @@
     "solution = Solution()\n",
     "\n",
     "# Call the maxArea method on the instance\n",
-    "print(solution.maxArea([1,8,6,2,5,4,8,3,7]))\n"
+    "print(solution.maxArea([1,8,6,2,5,4,8,3,7]))\n",
+    "#Another test case\n",
+    "print(solution.maxArea([1,1]))"
    ]
   },
   {
