--- a/11_Container_With_Most_Water.ipynb
+++ b/11_Container_With_Most_Water.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,8 @@
      "output_type": "stream",
      "text": [
       "49\n",
-      "1\n"
+      "1\n",
+      "16\n"
      ]
     }
    ],
@@ -42,7 +43,9 @@
     "# Call the maxArea method on the instance\n",
     "print(solution.maxArea([1,8,6,2,5,4,8,3,7]))\n",
     "#Another test case\n",
-    "print(solution.maxArea([1,1]))"
+    "print(solution.maxArea([1,1]))\n",
+    "#Another test case\n",
+    "print(solution.maxArea([4,3,2,1,4]))"
    ]
   },
   {
