Linear time complexity

--- a/11_Container_With_Most_Water.ipynb
+++ b/11_Container_With_Most_Water.ipynb
@@ -49,6 +49,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O(n) Time complexity."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "49\n"
+     ]
+    }
+   ],
+   "source": [
+    "from typing import List\n",
+    "class Solution:\n",
+    "    def maxArea(self, height: List[int]) -> int:\n",
+    "        #Linear Time O(n)\n",
+    "        result_area=0\n",
+    "\n",
+    "        #Assign Left to 0, right to len(height)-1\n",
+    "        left,right=0,len(height)-1\n",
+    "        #Calculate the area. Set it as max_area\n",
+    "        #find the minimum of left and right and shift it.\n",
+    "        #Calculate the area again, update max_area accordingly\n",
+    "        while left<right:\n",
+    "            max_area=min(height[left],height[right])*(right-left)\n",
+    "            if max_area>result_area:\n",
+    "                result_area=max_area\n",
+    "            if min(height[left],height[right])==height[left]:\n",
+    "                left+=1\n",
+    "            else:\n",
+    "                right-=1\n",
+    "        return result_area\n",
+    "\n",
+    "#Call the function\n",
+    "solution = Solution()\n",
+    "print(solution.maxArea([1,8,6,2,5,4,8,3,7]))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
