Added test case

--- a/11_Container_With_Most_Water.ipynb
+++ b/11_Container_With_Most_Water.ipynb
@@ -57,14 +57,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "49\n"
+      "49\n",
+      "1\n"
      ]
     }
    ],
@@ -92,7 +93,9 @@
     "\n",
     "#Call the function\n",
     "solution = Solution()\n",
-    "print(solution.maxArea([1,8,6,2,5,4,8,3,7]))"
+    "print(solution.maxArea([1,8,6,2,5,4,8,3,7]))\n",
+    "#Another test case\n",
+    "print(solution.maxArea([1,1]))"
    ]
   },
   {
