--- a/125_Valid_Palindrome.ipynb
+++ b/125_Valid_Palindrome.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,8 @@
      "output_type": "stream",
      "text": [
       "True\n",
-      "False\n"
+      "False\n",
+      "True\n"
      ]
     }
    ],
@@ -76,7 +77,10 @@
     "print(solution.isPalindrome(input_str))\n",
     "# Another test case\n",
     "input_str = \"race a car\"\n",
-    "print(solution.isPalindrome(input_str))  # Expected output: False"
+    "print(solution.isPalindrome(input_str))  # Expected output: False\n",
+    "# Another test\n",
+    "input_str =\"No lemon, no melon\"\n",
+    "print(solution.isPalindrome(input_str))  # Expected output: True"
    ]
   },
   {
