--- a/345_Reverse_Vowels_In_String.ipynb
+++ b/345_Reverse_Vowels_In_String.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,8 @@
      "output_type": "stream",
      "text": [
       "holle\n",
-      "baeswex\n"
+      "leotcede\n",
+      "bleh\n"
      ]
     }
    ],
@@ -62,6 +63,8 @@
     "#Call the function\n",
     "s = \"hello\"\n",
     "sol = Solution()\n",
+    "print(sol.reverseVowels(s))\n",
+    "s= \"leetcode\"\n",
     "print(sol.reverseVowels(s))\n",
     "#let user enter the string \n",
     "s = input(\"Enter the string: \")\n",
