Optimal solution with O(n) time, O(1) space

--- a/42_Trapping_Rain_Water.ipynb
+++ b/42_Trapping_Rain_Water.ipynb
@@ -52,11 +52,15 @@
     "        max_Left[1]=height[0]\n",
     "        water_Trapped=0\n",
     "        result=0\n",
+    "        #Find the maximum height to the left of each element\n",
     "        for i in range(1,len(height)-1):\n",
     "            max_Left[i]=max(height[i-1],max_Left[i-1])\n",
+    "        #Find the maximum height to the right of each element\n",
     "        for i in range(len(height)-2,-1,-1):\n",
     "            max_Right[i]=max(height[i+1],max_Right[i+1])\n",
+    "        #Find the water trapped at each element\n",
     "        for i in range(0,len(height)-1):\n",
+    "            #Find the minimum of the maximum height to the left and right of each element\n",
     "            water_Trapped=min(max_Left[i],max_Right[i])-height[i]\n",
     "            if(water_Trapped>=0):\n",
     "                result+=water_Trapped\n",
@@ -70,11 +74,63 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Time=O(n)\n",
+    "Space=O(1)\n",
+    "Two pointer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def trap(self, height: List[int]) -> int:\n",
+    "        #For height=[0] case\n",
+    "        if len(height) < 2:  # Add this check\n",
+    "            return 0\n",
+    "        left,right=0,len(height)-1\n",
+    "        max_L,max_R=height[left],height[right]\n",
+    "        result,water_Trapped=0,0\n",
+    "\n",
+    "        while left<right:\n",
+    "            #decide which cell to compute and which pointer to shift depending on the comparison between the maxes\n",
+    "            if max_L<max_R:\n",
+    "                #Update left pointer since it is the minimum of max_L and max_R\n",
+    "                left+=1\n",
+    "                #Update the max_L\n",
+    "                max_L=max(max_L,height[left])\n",
+    "                #to find the water trapped\n",
+    "                water_Trapped=max_L-height[left]\n",
+    "                if water_Trapped>=0:\n",
+    "                    result+=water_Trapped\n",
+    "            else:\n",
+    "                #update the right pointer\n",
+    "                right-=1\n",
+    "                #Similarly update max_R\n",
+    "                max_R=max(max_R,height[right])\n",
+    "                water_Trapped=max_R-height[right]\n",
+    "                if water_Trapped>=0:\n",
+    "                    result+=water_Trapped\n",
+    "        return result\n",
+    "\n",
+    "#call the function\n",
+    "height=[0,1,0,2,1,0,1,3,2,1,2,1]\n",
+    "sol=Solution()\n",
+    "print(sol.trap(height))"
+   ]
   }
  ],
  "metadata": {
