--- a/42_Trapping_Rain_Water.ipynb
+++ b/42_Trapping_Rain_Water.ipynb
@@ -84,14 +84,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6\n"
+      "6\n",
+      "9\n"
      ]
     }
    ],
@@ -129,8 +130,19 @@
     "#call the function\n",
     "height=[0,1,0,2,1,0,1,3,2,1,2,1]\n",
     "sol=Solution()\n",
+    "print(sol.trap(height))\n",
+    "#Another test case\n",
+    "height=[4,2,0,3,2,5]\n",
+    "sol=Solution()\n",
     "print(sol.trap(height))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
