--- a/42_Trapping_Rain_Water.ipynb
+++ b/42_Trapping_Rain_Water.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,8 @@
      "output_type": "stream",
      "text": [
       "6\n",
-      "9\n"
+      "9\n",
+      "6\n"
      ]
     }
    ],
@@ -133,6 +134,9 @@
     "print(sol.trap(height))\n",
     "#Another test case\n",
     "height=[4,2,0,3,2,5]\n",
+    "sol=Solution()\n",
+    "print(sol.trap(height))\n",
+    "height=[0,1,0,2,1,0,1,3,2,1,2,1]\n",
     "sol=Solution()\n",
     "print(sol.trap(height))"
    ]
