--- a/22_Generate_Parathesis.ipynb
+++ b/22_Generate_Parathesis.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['((()))', '(()())', '(())()', '()(())', '()()()']\n"
+      "['((()))', '(()())', '(())()', '()(())', '()()()']\n",
+      "['(())', '()()']\n"
      ]
     }
    ],
@@ -56,6 +57,9 @@
     "\n",
     "# Call the function\n",
     "n=3\n",
+    "sol=Solution()\n",
+    "print(sol.generateParenthesis(n))\n",
+    "n=2\n",
     "sol=Solution()\n",
     "print(sol.generateParenthesis(n))"
    ]
