--- a/739_Daily_Temperatures.ipynb
+++ b/739_Daily_Temperatures.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 1, 4, 2, 1, 1, 0, 0]\n"
+      "[1, 1, 4, 2, 1, 1, 0, 0]\n",
+      "[1, 1, 1, 0, 0]\n"
      ]
     }
    ],
@@ -43,7 +44,9 @@
     "#Call the function\n",
     "temperatures=[73, 74, 75, 71, 69, 72, 76, 73]\n",
     "sol=Solution()\n",
-    "print(sol.dailyTemperatures(temperatures))      "
+    "print(sol.dailyTemperatures(temperatures))     \n",
+    "temperatures=[30,40,50,60,20] \n",
+    "print(sol.dailyTemperatures(temperatures))"
    ]
   },
   {
