--- a/739_Daily_Temperatures.ipynb
+++ b/739_Daily_Temperatures.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,8 @@
      "output_type": "stream",
      "text": [
       "[1, 1, 4, 2, 1, 1, 0, 0]\n",
-      "[1, 1, 1, 0, 0]\n"
+      "[1, 1, 1, 0, 0]\n",
+      "[1, 1, 1, 5, 1, 1, 1, 1, 0]\n"
      ]
     }
    ],
@@ -46,6 +47,8 @@
     "sol=Solution()\n",
     "print(sol.dailyTemperatures(temperatures))     \n",
     "temperatures=[30,40,50,60,20] \n",
+    "print(sol.dailyTemperatures(temperatures))\n",
+    "temperatures=[23,45,67,89,12,34,56,78,90]\n",
     "print(sol.dailyTemperatures(temperatures))"
    ]
   },
