--- a/22_Generate_Parathesis.ipynb
+++ b/22_Generate_Parathesis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,8 @@
      "output_type": "stream",
      "text": [
       "['((()))', '(()())', '(())()', '()(())', '()()()']\n",
-      "['(())', '()()']\n"
+      "['(())', '()()']\n",
+      "['()']\n"
      ]
     }
    ],
@@ -61,8 +62,18 @@
     "print(sol.generateParenthesis(n))\n",
     "n=2\n",
     "sol=Solution()\n",
+    "print(sol.generateParenthesis(n))\n",
+    "n=1\n",
+    "sol=Solution()\n",
     "print(sol.generateParenthesis(n))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
