--- a/605_Can_Place_Flowers.ipynb
+++ b/605_Can_Place_Flowers.ipynb
@@ -44,7 +44,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "True\n",
+      "False\n"
      ]
     }
    ],
@@ -75,7 +76,8 @@
     "        return False\n",
     "\n",
     "#Calling the function and printing the result\n",
-    "print(Solution().canPlaceFlowers([1,0,0,0,1], 1)) #Expected output is True"
+    "print(Solution().canPlaceFlowers([1,0,0,0,1], 1)) #Expected output is True\n",
+    "print(Solution().canPlaceFlowers([1,0,0,0,1], 2)) #Expected output is False"
    ]
   },
   {
