--- a/605_Can_Place_Flowers.ipynb
+++ b/605_Can_Place_Flowers.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,8 @@
      "output_type": "stream",
      "text": [
       "True\n",
-      "False\n"
+      "False\n",
+      "True\n"
      ]
     }
    ],
@@ -77,7 +78,8 @@
     "\n",
     "#Calling the function and printing the result\n",
     "print(Solution().canPlaceFlowers([1,0,0,0,1], 1)) #Expected output is True\n",
-    "print(Solution().canPlaceFlowers([1,0,0,0,1], 2)) #Expected output is False"
+    "print(Solution().canPlaceFlowers([1,0,0,0,1], 2)) #Expected output is False\n",
+    "print(Solution().canPlaceFlowers([0,0,1,0,0], 1)) #Expected output is TrueS"
    ]
   },
   {
