--- a/150_Evaluate_Reverse_Polish_Notation.ipynb
+++ b/150_Evaluate_Reverse_Polish_Notation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,8 @@
      "output_type": "stream",
      "text": [
       "9\n",
-      "6\n"
+      "6\n",
+      "22\n"
      ]
     }
    ],
@@ -56,7 +57,8 @@
     "# Call the function\n",
     "s=Solution()\n",
     "print(s.evalRPN([\"2\",\"1\",\"+\",\"3\",\"*\"])) # 9\n",
-    "print(s.evalRPN([\"4\",\"13\",\"5\",\"/\",\"+\"])) # 6"
+    "print(s.evalRPN([\"4\",\"13\",\"5\",\"/\",\"+\"])) # 6\n",
+    "print(s.evalRPN([\"10\",\"6\",\"9\",\"3\",\"+\",\"-11\",\"*\",\"/\",\"*\",\"17\",\"+\",\"5\",\"+\"])) # 22"
    ]
   },
   {
