--- a/150_Evaluate_Reverse_Polish_Notation.ipynb
+++ b/150_Evaluate_Reverse_Polish_Notation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,8 @@
      "text": [
       "9\n",
       "6\n",
-      "22\n"
+      "22\n",
+      "18\n"
      ]
     }
    ],
@@ -58,7 +59,8 @@
     "s=Solution()\n",
     "print(s.evalRPN([\"2\",\"1\",\"+\",\"3\",\"*\"])) # 9\n",
     "print(s.evalRPN([\"4\",\"13\",\"5\",\"/\",\"+\"])) # 6\n",
-    "print(s.evalRPN([\"10\",\"6\",\"9\",\"3\",\"+\",\"-11\",\"*\",\"/\",\"*\",\"17\",\"+\",\"5\",\"+\"])) # 22"
+    "print(s.evalRPN([\"10\",\"6\",\"9\",\"3\",\"+\",\"-11\",\"*\",\"/\",\"*\",\"17\",\"+\",\"5\",\"+\"])) # 22\n",
+    "print(s.evalRPN([\"18\"])) # 18"
    ]
   },
   {
