--- a/704_Binary_Search.ipynb
+++ b/704_Binary_Search.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n"
+      "4\n",
+      "12\n"
      ]
     }
    ],
@@ -31,8 +32,18 @@
     "#call the function\n",
     "nums = [-1,0,3,5,9,12]\n",
     "target = 9\n",
+    "print(Solution().search(nums,target))\n",
+    "nums = [8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27]\n",
+    "target = 20\n",
     "print(Solution().search(nums,target))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
