--- a/74_Search_a_2d_matrix.ipynb
+++ b/74_Search_a_2d_matrix.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "True\n",
+      "False\n"
      ]
     }
    ],
@@ -64,6 +65,9 @@
     "#calling the function\n",
     "matrix = [[1,3,5,7],[10,11,16,20],[23,30,34,60]]\n",
     "target = 3\n",
+    "print(Solution().searchMatrix(matrix,target))\n",
+    "matrix = [[1,3,5,7],[10,11,16,20],[23,30,34,60]]\n",
+    "target = 13\n",
     "print(Solution().searchMatrix(matrix,target))\n",
     "\n",
     "\n",
