--- a/74_Search_a_2d_matrix.ipynb
+++ b/74_Search_a_2d_matrix.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,8 @@
      "output_type": "stream",
      "text": [
       "True\n",
-      "False\n"
+      "False\n",
+      "True\n"
      ]
     }
    ],
@@ -68,6 +69,9 @@
     "print(Solution().searchMatrix(matrix,target))\n",
     "matrix = [[1,3,5,7],[10,11,16,20],[23,30,34,60]]\n",
     "target = 13\n",
+    "print(Solution().searchMatrix(matrix,target))\n",
+    "matrix = [[1,3,5,7],[10,11,16,20],[23,30,34,60]]\n",
+    "target = 11\n",
     "print(Solution().searchMatrix(matrix,target))\n",
     "\n",
     "\n",
