--- a/853_Car_Fleet.ipynb
+++ b/853_Car_Fleet.ipynb
@@ -18,7 +18,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n"
+      "3\n",
+      "2\n"
      ]
     }
    ],
@@ -62,7 +63,10 @@
     "position = [10,8,0,5,3]\n",
     "speed = [2,4,1,1,3]\n",
     "print(Solution().carFleet(target,position,speed))\n",
-    "            \n"
+    "target = 10\n",
+    "position = [6,8]\n",
+    "speed = [3,2]\n",
+    "print(Solution().carFleet(target,position,speed))\n"
    ]
   },
   {
