feat: Add additional test cases for carFleet function

--- a/853_Car_Fleet.ipynb
+++ b/853_Car_Fleet.ipynb
@@ -66,7 +66,11 @@
     "target = 10\n",
     "position = [6,8]\n",
     "speed = [3,2]\n",
-    "print(Solution().carFleet(target,position,speed))\n"
+    "print(Solution().carFleet(target,position,speed))\n",
+    "target = 10\n",
+    "position = [0,4,2]\n",
+    "speed = [2,1,3]\n",
+    "print(Solution().carFleet(target,position,speed))"
    ]
   },
   {
