--- a/704_Binary_Search.ipynb
+++ b/704_Binary_Search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,8 @@
      "output_type": "stream",
      "text": [
       "4\n",
-      "12\n"
+      "12\n",
+      "4\n"
      ]
     }
    ],
@@ -35,6 +36,9 @@
     "print(Solution().search(nums,target))\n",
     "nums = [8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27]\n",
     "target = 20\n",
+    "print(Solution().search(nums,target))\n",
+    "nums = [1,2,3,4,5,6,7,8,9,10]\n",
+    "target = 5\n",
     "print(Solution().search(nums,target))"
    ]
   },
