--- a/424_Longest_Repeating_Character_Replacement.ipynb
+++ b/424_Longest_Repeating_Character_Replacement.ipynb
@@ -9,6 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "4\n",
       "4\n"
      ]
     }
@@ -40,8 +41,16 @@
     "        return result  \n",
     "\n",
     "sol=Solution()\n",
-    "print(sol.characterReplacement(\"ABAB\",2)) #4      "
+    "print(sol.characterReplacement(\"ABAB\",2)) #4      \n",
+    "print(sol.characterReplacement(\"AABABBA\",1)) #4"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
