--- a/226_Invert_Binary_tree.ipynb
+++ b/226_Invert_Binary_tree.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Definition for a binary tree node.\n",
+    "# Definition for a binary tree node with a left and right child.\n",
     "# class TreeNode(object):\n",
     "#     def __init__(self, val=0, left=None, right=None):\n",
     "#         self.val = val\n",
